caputils-0.7.16
---------------

	* fix: misc issues found during fuzzing.
	* add: additional tests
	* add: support for decoding additional protocols.

caputils-0.7.15
---------------

	* add: header_walk functionality
	* fix: format properly handles truncated http
	* fix: format properly handles truncated tcp options

caputils-0.7.14
---------------

	* change: moving caputils_version from utils.h to version.h
	* change: [marc] adding more fields to status report.
	* fix: Allow capfiles with caplen zero.
	* add: [capfilter] support for truncating packets using --caplen.
	* add: [capfilter] adding options for limiting number of packets.
	* add: [capshow] support for decoding IPv6 and DNS.
	* fix: [capshow] iface now shows all 8 chars.
	* fix: UDP streaming (both unicast and multicast)
	* add: refactor buffer behaviour so it is reusable.
	* add: [marc] adding ping event.
	* change: minor but breaking changes to API.
	* add: [script] including script for running capdump as debian service.
	* add: [capdump] support for different operations when using markers
	* fix: [capdump] better support for positional arguments
	* fix: [capinfo] read from stdin by default
	* fix: [capfilter] support for positional arguments
	* fix: capmerge previously sorted packets wrong under certain conditions
	* add: API to get payload sizes at various layers.
	* add: API to get properties for an interface.
	* change: [stream] packet printing is now stateful. API change.
	* fix: [stream] detect duplicate packets on loopback interfaces.
	* fix: timepico_from_string requires long long on some platforms.
	* add: [capshow] support for max matched packets.
	* add: [capinfo] show both packet count and bytes per protocol.
	* add: [pcap2cap] support for specifying capture interface.
	* fix: [marcd] improving compability with 0.6 MPs.
	* fix: timepico_from_string now properly parses picoseconds.
	* fix: [capshow] always show TCP flags when printing transport layer.